fixed some typescript errors

--- a/index.html
+++ b/index.html
@@ -1,20 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sky Shards</title>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4CV8HSPPV4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-4CV8HSPPV4');
+      gtag("config", "G-4CV8HSPPV4");
     </script>
     <meta name="google-site-verification" content="kQISkGfHKAntOvnVha8SStTJclrpjlkjAdSgr_l7_Ak" />
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SkyShards - Fusion Calculator</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon/favicon.png" />
+    <link rel="shortcut icon" href="/favicon/favicon.png" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="The ultimate SkyShards fusion calculator for Hypixel Skyblock. Calculate optimal shard recipes, fusion paths, and material costs." />
+    <meta
+      name="keywords"
+      content="skyshards, sky shards, hypixel, skyblock, hypixel skyblock, minecraft, shards, fusion calculator, shard calculator, shard fusion, skyblock calculator, hypixel calculator, minecraft calculator, skyblock shards, shard upgrades, shard recipes, fusion recipes, skyblock tools, hypixel tools, minecraft tools, skyblock guide, shard guide, fusion guide, skyblock optimizer, shard optimizer, rare shards, epic shards, legendary shards, common shards, uncommon shards, skyblock farming, shard farming, skyblock efficiency, hypixel skyblock shards, minecraft skyblock, skyblock shard calculator, hypixel shard calculator, skyblock fusion, shard fusion, shard combinations, optimal fusion, fusion paths, material calculator, crafting calculator, skyblock crafting, shard crafting, skyblock resources, shard resources, skyblock planning, shard planning, skyblock strategy, shard strategy"
+    />
+    <meta name="author" content="SkyShards" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="language" content="en" />
+    <meta name="theme-color" content="#8b5cf6" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://campionnn.github.io/SkyShards/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://campionnn.github.io/SkyShards/" />
+    <meta property="og:title" content="SkyShards - Fusion Calculator | Hypixel SkyBlock Shard Calculator" />
+    <meta property="og:description" content="The ultimate SkyShards fusion calculator for Hypixel Skyblock. Calculate optimal shard recipes, fusion paths, and material costs." />
+    <meta property="og:image" content="https://campionnn.github.io/SkyShards/screenshots/calculator.png" />
+    <meta property="og:image:alt" content="SkyShards fusion calculator interface" />
+    <meta property="og:site_name" content="SkyShards" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://campionnn.github.io/SkyShards/" />
+    <meta name="twitter:title" content="SkyShards - Fusion Calculator | Hypixel SkyBlock Shard Calculator" />
+    <meta name="twitter:description" content="The ultimate SkyShards fusion calculator for Hypixel Skyblock. Calculate optimal shard recipes, fusion paths, and material costs." />
+    <meta name="twitter:image" content="https://campionnn.github.io/SkyShards/screenshots/calculator.png" />
+    <meta name="twitter:image:alt" content="SkyShards fusion calculator interface" />
+
+    <!-- Mobile App -->
+    <meta name="application-name" content="SkyShards" />
+    <meta name="apple-mobile-web-app-title" content="SkyShards" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
