--- a/public/404.html
+++ b/public/404.html
@@ -10,10 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
     <script>
       // Redirect all 404s to the SPA entry point, preserving the path for React Router
-      if (location.pathname.startsWith("/SkyShards")) {
-        const newPath = location.pathname.replace("/SkyShards", "") || "/";
-        location.replace(newPath + location.search + location.hash);
-      }
+      sessionStorage.setItem('pathToRedirect', location.pathname + location.search + location.hash);
+      location.replace('/');
     </script>
   </head>
   <body>
