--- a/index.html
+++ b/index.html
@@ -5,19 +5,82 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4CV8HSPPV4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-4CV8HSPPV4');
+      gtag("config", "G-4CV8HSPPV4");
     </script>
     <meta name="google-site-verification" content="kQISkGfHKAntOvnVha8SStTJclrpjlkjAdSgr_l7_Ak" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon/favicon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SkyShards - Fusion Calculator</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Sky Shards</title>
+    <meta name="description" content="Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently." />
+    <meta
+      name="keywords"
+      content="hypixel, skyblock, shards, fusion calculator, shards calculator, calculator, hypixel skyblock, shard fusion, skyblock calculator, hypixel calculator, fusion recipes, shard costs, skyblock tools, shards guide, shard guide, skyblock guide, hypixel guide, fusion guide, shard optimizer, skyblock optimizer, shard tracker, fusion tracker, skyblock fusion, hypixel fusion, shard prices, skyblock prices, hypixel prices, bazaar prices, shard bazaar, skyblock bazaar, hypixel bazaar, shard trading, skyblock trading, hypixel trading, minecraft skyblock, minecraft hypixel, skyblock helper, hypixel helper, shard helper, fusion helper, skyblock utility, hypixel utility, shard utility, skyblock companion, hypixel companion, shard companion, skyblock assistant, hypixel assistant, shard assistant, minecraft, minecraft calculator, minecraft tools, minecraft guide, minecraft helper, minecraft utility, minecraft server, hypixel server, skyblock server, minecraft hypixel server, mc skyblock, mc hypixel, minecraft gaming, gaming calculator, gaming tools, gaming guide, skyblock wiki, hypixel wiki, minecraft wiki, skyblock database, hypixel database, minecraft database, skyblock recipes, hypixel recipes, minecraft recipes, skyblock items, hypixel items, minecraft items, skyblock mods, hypixel mods, minecraft mods, skyblock gameplay, hypixel gameplay, minecraft gameplay"
+    />
+    <meta name="author" content="SkyShards" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="en" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://skyshards.com/" />
+    <meta property="og:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta property="og:description" content="Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently." />
+    <meta property="og:image" content="https://skyshards.com/screenshots/calculator.png" />
+    <meta property="og:site_name" content="SkyShards" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://skyshards.com/" />
+    <meta property="twitter:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta
+      property="twitter:description"
+      content="Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently."
+    />
+    <meta property="twitter:image" content="https://skyshards.com/screenshots/calculator.png" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#8b5cf6" />
+    <meta name="msapplication-TileColor" content="#8b5cf6" />
+    <link rel="canonical" href="https://skyshards.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "SkyShards",
+        "url": "https://skyshards.com",
+        "description": "Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently.",
+        "applicationCategory": "GameApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "SkyShards"
+        },
+        "keywords": "hypixel, skyblock, shards, fusion calculator, shards calculator, calculator, hypixel skyblock, shard fusion, skyblock calculator, hypixel calculator, fusion recipes, shard costs, skyblock tools, shards guide, shard guide, skyblock guide, hypixel guide, fusion guide, shard optimizer, skyblock optimizer, shard tracker, fusion tracker, skyblock fusion, hypixel fusion, shard prices, skyblock prices, hypixel prices, bazaar prices, shard bazaar, skyblock bazaar, hypixel bazaar, shard trading, skyblock trading, hypixel trading, minecraft skyblock, minecraft hypixel, skyblock helper, hypixel helper, shard helper, fusion helper, skyblock utility, hypixel utility, shard utility, skyblock companion, hypixel companion, shard companion, skyblock assistant, hypixel assistant, shard assistant, minecraft, minecraft calculator, minecraft tools, minecraft guide, minecraft helper, minecraft utility, minecraft server, hypixel server, skyblock server, minecraft hypixel server, mc skyblock, mc hypixel, minecraft gaming, gaming calculator, gaming tools, gaming guide, skyblock wiki, hypixel wiki, minecraft wiki, skyblock database, hypixel database, minecraft database, skyblock recipes, hypixel recipes, minecraft recipes, skyblock items, hypixel items, minecraft items, skyblock mods, hypixel mods, minecraft mods, skyblock gameplay, hypixel gameplay, minecraft gameplay"
+      }
+    </script>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
