fixed page titles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <title>Sky Shards</title>
+    <title>SkyShards · Calculator</title>
     <meta name="description" content="Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently." />
     <meta
       name="keywords"
@@ -36,7 +36,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://skyshards.com/" />
-    <meta property="og:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta property="og:title" content="SkyShards · Hypixel SkyBlock Fusion Calculator" />
     <meta property="og:description" content="Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently." />
     <meta property="og:image" content="https://skyshards.com/screenshots/calculator.png" />
     <meta property="og:site_name" content="SkyShards" />
@@ -44,7 +44,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://skyshards.com/" />
-    <meta property="twitter:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta property="twitter:title" content="SkyShards · Hypixel SkyBlock Fusion Calculator" />
     <meta
       property="twitter:description"
       content="Advanced fusion calculator for Hypixel SkyBlock shards. Calculate optimal fusion recipes, track costs, and manage your shard collection efficiently."
