made better page description

--- a/index.html
+++ b/index.html
@@ -23,16 +23,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Enhanced SEO Meta Tags -->
-    <title>SkyShards - #1 Hypixel SkyBlock Fusion Calculator | Shard Optimizer Tool</title>
-    <meta
-      name="description"
-      content="The most advanced Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes, track costs, compare prices, and maximize your profits. Free tool used by 10,000+ players."
-    />
+    <title>SkyShards - Calculator</title>
+    <meta name="description" content="Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes." />
     <meta
       name="keywords"
       content="hypixel skyblock fusion calculator, shard calculator, skyblock calculator, hypixel calculator, shard fusion, fusion recipes, shard costs, skyblock tools, skyblock helper, hypixel helper, shard optimizer, fusion optimizer, skyblock bazaar, shard prices, minecraft skyblock, hypixel skyblock, skyblock guide, fusion guide, shard guide, skyblock wiki, hypixel wiki, minecraft calculator, gaming calculator, skyblock database, hypixel database, shard trading, skyblock trading, minecraft tools, skyblock utility, hypixel utility, shard tracker, fusion tracker, skyblock companion, hypixel companion, minecraft gaming, gaming tools, skyblock gameplay, hypixel gameplay, minecraft gameplay, skyblock recipes, hypixel recipes, minecraft recipes, skyblock items, hypixel items, minecraft items, skyblock mods, hypixel mods, minecraft mods, minecraft server, hypixel server, skyblock server, minecraft hypixel server, mc skyblock, mc hypixel, gaming guide, skyblock assistant, hypixel assistant, shard assistant"
     />
-    <meta name="author" content="SkyShards Team" />
+    <meta name="author" content="SkyShards" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="language" content="en" />
     <meta name="rating" content="general" />
@@ -62,21 +59,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://skyshards.com/" />
-    <meta property="og:title" content="SkyShards - #1 Hypixel SkyBlock Fusion Calculator | Free Shard Optimizer" />
-    <meta
-      property="og:description"
-      content="The most advanced Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes, track costs, compare prices, and maximize your profits. Free tool used by 10,000+ players."
-    />
+    <meta property="og:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta property="og:description" content="Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes." />
     <meta property="og:image" content="https://skyshards.com/screenshots/calculator.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://skyshards.com/" />
-    <meta property="twitter:title" content="SkyShards - #1 Hypixel SkyBlock Fusion Calculator | Free Shard Optimizer" />
-    <meta
-      property="twitter:description"
-      content="The most advanced Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes, track costs, compare prices, and maximize your profits. Free tool used by 10,000+ players."
-    />
+    <meta property="twitter:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta property="twitter:description" content="Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes." />
     <meta property="twitter:image" content="https://skyshards.com/screenshots/calculator.png" />
 
     <!-- Additional SEO -->
@@ -95,12 +86,12 @@
         "name": "SkyShards",
         "alternateName": "SkyShards Fusion Calculator",
         "url": "https://skyshards.com",
-        "description": "The most advanced Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes, track costs, compare prices, and maximize your profits. Free tool used by 10,000+ players.",
+        "description": "Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes.",
         "applicationCategory": "GameApplication",
         "operatingSystem": "Web",
         "browserRequirements": "Requires JavaScript. Requires HTML5.",
         "softwareVersion": "2.0",
-        "releaseNotes": "Enhanced fusion calculator with real-time pricing and optimization features.",
+        "releaseNotes": "Enhanced fusion calculator",
         "screenshot": "https://skyshards.com/screenshots/calculator.png",
         "offers": {
           "@type": "Offer",
@@ -110,7 +101,7 @@
         },
         "author": {
           "@type": "Organization",
-          "name": "SkyShards Team",
+          "name": "SkyShards",
           "url": "https://skyshards.com"
         },
         "publisher": {
@@ -129,22 +120,7 @@
           "bestRating": "5",
           "worstRating": "1",
           "ratingCount": "2847"
-        },
-        "review": [
-          {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "MinecraftPlayer123"
-            },
-            "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5",
-              "bestRating": "5"
-            },
-            "reviewBody": "Best fusion calculator for Hypixel SkyBlock. Saves me hours of calculations and helps maximize profits!"
-          }
-        ]
+        }
       }
     </script>
   </head>
