updated desc issue for the website

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>
+      <div style="text-align: center; padding: 2rem; font-family: Arial, sans-serif">
+        <h1>SkyShards - Hypixel SkyBlock Fusion Calculator</h1>
+        <p>Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes.</p>
+      </div>
+    </noscript>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
