added ezoic verifications meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="ezoic-site-verification" content="ob7cVlR1TplrnByJQ1TGvvgGVsYLZe" />
     <title>Sky Shards</title>
 
     <!-- Google tag (gtag.js) -->
