added cookiebot consent instead of ezoic

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
 
-    <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
-    <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+    <!-- Cookiebot CMP Script -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="87f006c1-fc7d-4aea-9e9e-f09cf5a05d4e" data-blockingmode="auto" type="text/javascript"></script>
+
     <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
     <script>
       window.ezstandalone = window.ezstandalone || {};
