--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
 
     <!-- Ezoic CMP Scripts -->
-    <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
-    <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+    <!-- <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script> -->
+    <!-- <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script> -->
 
     <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
     <script>
