--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="ezoic-site-verification" content="ob7cVlR1TplrnByJQ1TGvvgGVsYLZe" />
     <title>Sky Shards</title>
 
     <!-- Google tag (gtag.js) -->
@@ -18,6 +17,11 @@
 
       gtag("config", "G-4CV8HSPPV4");
     </script>
+
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2480990722573960"
+            crossorigin="anonymous"></script>
+
     <meta name="google-site-verification" content="kQISkGfHKAntOvnVha8SStTJclrpjlkjAdSgr_l7_Ak" />
 
     <!-- Favicon -->
@@ -82,16 +86,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
-
-    <!-- Ezoic CMP Scripts -->
-    <!-- <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script> -->
-    <!-- <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script> -->
-
-    <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
-    <script>
-      window.ezstandalone = window.ezstandalone || {};
-      ezstandalone.cmd = ezstandalone.cmd || [];
-    </script>
 
     <!-- Enhanced JSON-LD Structured Data -->
     <script type="application/ld+json">
