added google adsense script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2480990722573960" crossorigin="anonymous"></script>
     <title>SkyShards</title>
 
     <!-- Google tag (gtag.js) -->
@@ -19,8 +20,7 @@
     </script>
 
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2480990722573960"
-            crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2480990722573960" crossorigin="anonymous"></script>
 
     <meta name="google-site-verification" content="kQISkGfHKAntOvnVha8SStTJclrpjlkjAdSgr_l7_Ak" />
 
