fix privacy policy again

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
     </script>
   </head>
   <body>
+    <!-- Privacy Policy link for advertisers -->
+    <a href="https://skyshards.com/client-privacy-policy" style="position: absolute; left: -9999px; top: -9999px;" aria-hidden="true">Privacy Policy</a>
+
     <div id="root"></div>
     <noscript>
       <div style="text-align: center; padding: 2rem; font-family: Arial, sans-serif">
