fix some crop image stuff and fix seo

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Enhanced SEO Meta Tags -->
-    <title>SkyShards - Calculator</title>
-    <meta name="description" content="Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes." />
+    <title>SkyShards Greenhouse - Hypixel SkyBlock Greenhouse Calculator & Layout Designer</title>
+    <meta name="description" content="Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts" />
     <meta
       name="keywords"
-      content="hypixel skyblock fusion calculator, shard calculator, skyblock calculator, hypixel calculator, shard fusion, fusion recipes, shard costs, skyblock tools, skyblock helper, hypixel helper, shard optimizer, fusion optimizer, skyblock bazaar, shard prices, minecraft skyblock, hypixel skyblock, skyblock guide, fusion guide, shard guide, skyblock wiki, hypixel wiki, minecraft calculator, gaming calculator, skyblock database, hypixel database, shard trading, skyblock trading, minecraft tools, skyblock utility, hypixel utility, shard tracker, fusion tracker, skyblock companion, hypixel companion, minecraft gaming, gaming tools, skyblock gameplay, hypixel gameplay, minecraft gameplay, skyblock recipes, hypixel recipes, minecraft recipes, skyblock items, hypixel items, minecraft items, skyblock mods, hypixel mods, minecraft mods, minecraft server, hypixel server, skyblock server, minecraft hypixel server, mc skyblock, mc hypixel, gaming guide, skyblock assistant, hypixel assistant, shard assistant"
+      content="hypixel skyblock greenhouse, greenhouse calculator, crop mutation optimizer, gloomgourd calculator, skyblock greenhouse layout, mutation validator, greenhouse designer, hypixel farming tool, skyblock crop planner, greenhouse optimizer, crop mutations, greenhouse solver, skyblock farming, hypixel greenhouse guide, crop placement tool, greenhouse expansion, mutation calculator, skyblock tools, hypixel calculator, minecraft skyblock, greenhouse automation, crop layout, farming optimizer, skyblock helper, hypixel utility, greenhouse planner, mutation solver, crop validator, skyblock companion, hypixel skyblock tools, greenhouse layout designer, crop mutation guide, farming calculator, greenhouse grid, skyblock optimizer"
     />
     <meta name="author" content="SkyShards" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
@@ -48,10 +48,10 @@
 
     <!-- Enhanced Open Graph for better social sharing -->
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
+    <meta property="og:site_name" content="SkyShards Greenhouse" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="SkyShards Hypixel SkyBlock Fusion Calculator Interface" />
+    <meta property="og:image:alt" content="SkyShards Greenhouse - Hypixel SkyBlock Greenhouse Calculator and Layout Designer" />
 
     <!-- Additional Twitter Meta -->
     <meta name="twitter:creator" content="@SkyShards" />
@@ -67,15 +67,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://skyshards.com/" />
-    <meta property="og:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
-    <meta property="og:description" content="Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes." />
+    <meta property="og:title" content="SkyShards Greenhouse - Hypixel SkyBlock Greenhouse Tools" />
+    <meta property="og:description" content="Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts" />
     <meta property="og:image" content="https://skyshards.com/screenshots/calculator.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://skyshards.com/" />
-    <meta property="twitter:title" content="SkyShards - Hypixel SkyBlock Fusion Calculator" />
-    <meta property="twitter:description" content="Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes." />
+    <meta property="twitter:title" content="SkyShards Greenhouse - Hypixel SkyBlock Tools" />
+    <meta property="twitter:description" content="Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts" />
     <meta property="twitter:image" content="https://skyshards.com/screenshots/calculator.png" />
 
     <!-- Additional SEO -->
@@ -91,15 +91,15 @@
       {
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "SkyShards",
-        "alternateName": "SkyShards Fusion Calculator",
+        "name": "SkyShards Greenhouse",
+        "alternateName": "SkyShards Greenhouse Calculator and Designer",
         "url": "https://skyshards.com",
-        "description": "Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes.",
+        "description": "Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts",
         "applicationCategory": "GameApplication",
         "operatingSystem": "Web",
         "browserRequirements": "Requires JavaScript. Requires HTML5.",
         "softwareVersion": "2.0",
-        "releaseNotes": "Enhanced fusion calculator",
+        "releaseNotes": "Greenhouse calculator and layout designer",
         "screenshot": "https://skyshards.com/screenshots/calculator.png",
         "offers": {
           "@type": "Offer",
@@ -121,7 +121,7 @@
           "@type": "Audience",
           "audienceType": "Gamers, Minecraft Players, Hypixel SkyBlock Players"
         },
-        "keywords": "hypixel skyblock fusion calculator, shard calculator, skyblock calculator, hypixel calculator, shard fusion, fusion recipes, shard costs, skyblock tools, skyblock helper, hypixel helper, shard optimizer, fusion optimizer, skyblock bazaar, shard prices, minecraft skyblock, hypixel skyblock, skyblock guide, fusion guide, shard guide, skyblock wiki, hypixel wiki, minecraft calculator, gaming calculator, skyblock database, hypixel database, shard trading, skyblock trading, minecraft tools, skyblock utility, hypixel utility, shard tracker, fusion tracker, skyblock companion, hypixel companion, minecraft gaming, gaming tools, skyblock gameplay, hypixel gameplay, minecraft gameplay",
+        "keywords": "hypixel skyblock greenhouse, greenhouse calculator, crop mutation optimizer, gloomgourd calculator, skyblock greenhouse layout, mutation validator, greenhouse designer, hypixel farming tool, skyblock crop planner, greenhouse optimizer, crop mutations, greenhouse solver, skyblock farming, mutation calculator, skyblock tools, minecraft skyblock, hypixel skyblock, greenhouse automation, farming optimizer",
         "aggregateRating": {
           "@type": "AggregateRating",
           "ratingValue": "4.8",
@@ -136,8 +136,8 @@
     <div id="root"></div>
     <noscript>
       <div style="text-align: center; padding: 2rem; font-family: Arial, sans-serif">
-        <h1>SkyShards - Hypixel SkyBlock Fusion Calculator</h1>
-        <p>Hypixel SkyBlock fusion calculator. Calculate optimal shard fusion recipes.</p>
+        <h1>SkyShards Greenhouse - Hypixel SkyBlock Greenhouse Calculator & Designer</h1>
+        <p>Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts</p>
       </div>
     </noscript>
     <script type="module" src="/src/main.tsx"></script>
